
cmake_minimum_required(VERSION 2.8)
PROJECT(DAWN)
SET( CMAKE_BUILD_TYPE Debug )
aux_source_directory(./src SRC_LIST)
include_directories(./include)
add_executable(./bin/dawn ${SRC_LIST})
target_link_libraries(./bin/dawn pthread m)
include(CheckIncludeFile)
include(CheckIncludeFiles)
add_definitions(-DDAWN_HOME="${CMAKE_CURRENT_SOURCE_DIR}")
CHECK_INCLUDE_FILE(sys/event.h HAVE_EVENT_H)
CHECK_INCLUDE_FILE(sys/select.h HAVE_SELECT_H)
CHECK_INCLUDE_FILE(sys/epoll.h HAVE_EPOLL_H)
CHECK_INCLUDE_FILE(sys/poll.h HAVE_POLL_H)
if(HAVE_EVENT_H)
	message("--- use kqueue")
	add_definitions(-DHAVE_EVENT)
else()
	if(HAVE_EPOLL_H)
		message("--- use epoll")
		add_definitions(-DHAVE_EPOLL)
	else()
		if(HAVE_POLL_H)
			message("--- use poll")
			add_definitions(-DHAVE_POLL)
		else()
			message("--- use select")
			add_definitions(-DHAVE_SELECT)
	    endif()
	endif()
endif()

