bin_PROGRAMS=dawn
dawn_SOURCES= src/main.c src/thread.c src/thread.h src/network.h src/kqueue.c src/fdop.c src/queue.h src/queue.c src/connection.h src/item.h src/item.c src/hash.h src/hash.c src/protocol.c src/dy_char.h src/dy_char.c src/buffer.h src/buffer.c src/connection.c
dawn_CPPFLAGS= -I src/ 
